# interview-debrief-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COURSE_REVIEW.md  Makefile  PUBLIC_RELEASE.md  README.md  REVIEW_REPORT.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
docs/: HANDOFF_ANTON_2026-05-21.md  Intro to AI Agents_ Projects.xlsx  PROJECT_OVERVIEW.md  PROJECT_REPORT.md  project-focus-options-2026-04-23.md  project-hub.md
kb/: splits.json
labeling/: CLAUDE_CODE_GUIDE.md  README.md  enrich_interviewer_feedback.py  extract_feedback_windows.py  json_to_excel.py  prepare_prompt.py  run_annotation.md  run_splitter_cli.py  validate_splitter_vs_video.py
md/: arch_agents.md  arch_pipeline.md  assessors.md  billing.md  diarization.md  project.md  requirements_postponed.md  spec.md  train.md
prompts/: assessment.txt  splitter.txt
review/: README.md  REVIEW_REPORT.md  project-report-en_v1.docx
scripts/: ar.py  build_emulator_fixture.py  fix_splitter_output_names.py  kb.py  migrate_splitter_consolidate_json.py  migrate_splitter_mode.py  migrate_splitter_pipeline_log.py  migrate_splitter_v_prefix_names.py  phoenix_smoke.py  rename_transcripts_v2.py  reorganize_splitter_output.py  reorganize_transcripts.py  splitter_post.sh  strip_kind_prefix_splitter_output.py  strip_kind_prefix_transcripts.py  train_prompt.py
splitter_output/: README.md  amazon_business_intelligence_mock_interview_duplicate_products_20200529.prompt.txt  avito_product_analyst_middle_20240404.splitter.v1.mock.json  karpov_junior_ds_20220330.splitter.v2.json  (+37 more)
(+793 files in other folders)
