[project]
name = "am-best-offer"
version = "0.1.0"
description = "Course project: interview transcripts → structured assessment"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=2.5",
    "anthropic>=0.40",
    "litellm>=1.50",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tracing = [
    "arize-phoenix>=5.0",
    "openinference-instrumentation-dspy>=0.1",
    "opentelemetry-exporter-otlp>=1.25",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
